--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @font-face {
+      font-family: "Noto Sans Thai";
+      src: url("fonts/NotoSansThai.woff2") format("woff2");
+    }
+  </style>
 </head>
-<body>
+<body class="text-stone-700">
   <app-root></app-root>
 </body>
 </html>
